--- a/wasm-bs-photo-app-1/TODO.txt
+++ b/wasm-bs-photo-app-1/TODO.txt
@@ -9,5 +9,7 @@ vid "edit" klick, kanske)
 
 måste kunna editera information,text, namn nominera bilden till tävling osv
 
-Kolla upp CDN,behövs för bilder. 
+Kolla upp CDN,behövs för bilder. Troligen onödigt så här tidigt.
 Cacha Json anrop?
+
+Hover effekt med hand óch lite zoom av kort. Overlay text i vitt över image. Några ikoner kanske, som overlay? Views, osv. Med Tool tip
