WIP, upload almost done

--- a/wasm-bs-photo-app-1/TODO.txt
+++ b/wasm-bs-photo-app-1/TODO.txt
@@ -1,3 +1,7 @@
+Spinner i knapp för upload modal (stäng när uppladdning klar)
+
+
+
 Kolla upp att han en navbar /filter högst upp för my Images (ok om det scrollar ner), istället för på sidan
 som här: https://dribbble.com/search/shots/popular/?q=full-screen-modal
 eller här: https://getbootstrap.com/docs/5.3/examples/navbars/# (använd centered nav där, kanske? jag har exemplet i VS Code)
